--- a/FileBackup.ini
+++ b/FileBackup.ini
@@ -6,4 +6,4 @@ path = \\Hungs\stanley\Stanley
 
 [TGTPATH]
 path1 = C:\\Users\stanl.STANLEY\OneDrive
-path2 = C:\\Users\stanl.STANLEY\Documents
+path2 = C:\\Users\stanl.STANLEY\Documents\Stanley
