make FileBackup.ini template and update .pyw file

--- a/FileBackup.ini
+++ b/FileBackup.ini
@@ -2,8 +2,8 @@
 
 
 [SRCPATH]
-path = \\Hungs\stanley\Stanley
+path = [FULL_PATH]
 
 [TGTPATH]
-path1 = C:\\Users\stanl.STANLEY\OneDrive
-path2 = C:\\Users\stanl.STANLEY\Documents\Stanley
+path1 = [FULL_PATH]
+path2 = [FULL_PATH]
